--- a/410ShopManagement/GUI.csproj
+++ b/410ShopManagement/GUI.csproj
@@ -63,11 +63,20 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="401UC\HomeUC.xaml.cs">
+      <DependentUpon>HomeUC.xaml</DependentUpon>
+    </Compile>
     <Compile Include="401UC\iNotifier.xaml.cs">
       <DependentUpon>iNotifier.xaml</DependentUpon>
     </Compile>
     <Compile Include="401UC\iNotifierOKCancel.xaml.cs">
       <DependentUpon>iNotifierOKCancel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="401UC\PaymentUC.xaml.cs">
+      <DependentUpon>PaymentUC.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="401UC\ProductUC.xaml.cs">
+      <DependentUpon>ProductUC.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\TempWindow.xaml.cs">
       <DependentUpon>TempWindow.xaml</DependentUpon>
@@ -76,11 +85,23 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="401UC\HomeUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="401UC\iNotifier.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="401UC\iNotifierOKCancel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="401UC\PaymentUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="401UC\ProductUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -140,6 +161,25 @@
       <Project>{fea24ca3-da3c-4979-8448-087c966777a1}</Project>
       <Name>DTO</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Joystick 4kHD.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\DiscordAvt.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Duyy.jpg" />
+    <Resource Include="Assets\Hoàn.jpg" />
+    <Resource Include="Assets\Phựn.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\tempColunmNoBG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\firstColorNoBG.png" />
+    <Resource Include="Assets\secondColorNoBG.png" />
+    <Resource Include="Assets\thirdColorNoBG.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
