--- a/410ShopManagement/GUI.csproj
+++ b/410ShopManagement/GUI.csproj
@@ -185,6 +185,13 @@
     <Resource Include="Assets\PasswordIcon.png" />
     <Resource Include="Assets\UserIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\LogoFinal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\LogoCircle.png" />
+    <Resource Include="Assets\LogoName.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
