--- a/410ShopManagement/GUI.csproj
+++ b/410ShopManagement/GUI.csproj
@@ -72,6 +72,9 @@
     <Compile Include="401UC\iNotifierOKCancel.xaml.cs">
       <DependentUpon>iNotifierOKCancel.xaml</DependentUpon>
     </Compile>
+    <Compile Include="401UC\MenuViewItem.xaml.cs">
+      <DependentUpon>MenuViewItem.xaml</DependentUpon>
+    </Compile>
     <Compile Include="401UC\PaymentUC.xaml.cs">
       <DependentUpon>PaymentUC.xaml</DependentUpon>
     </Compile>
@@ -94,11 +97,19 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="401UC\MenuViewItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="401UC\PaymentUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="401UC\ProductUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="401UC\QuickAccessButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -112,6 +123,9 @@
     </Page>
     <Compile Include="401UC\AppInteractButton.xaml.cs">
       <DependentUpon>AppInteractButton.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="401UC\QuickAccessButton.xaml.cs">
+      <DependentUpon>QuickAccessButton.xaml</DependentUpon>
     </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -191,6 +205,18 @@
   <ItemGroup>
     <Resource Include="Assets\LogoCircle.png" />
     <Resource Include="Assets\LogoName.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Close_Button.png" />
+    <Resource Include="Assets\Minimize_Button.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Import_Button.png" />
+    <Resource Include="Assets\Payment_Button.png" />
+    <Resource Include="Assets\Product_Button.png" />
+    <Resource Include="Assets\Shop_s Ava.png" />
+    <Resource Include="Assets\Total bills.png" />
+    <Resource Include="Assets\Total hours.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
