--- a/410ShopManagement/GUI.csproj
+++ b/410ShopManagement/GUI.csproj
@@ -113,6 +113,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="401UC\StorageUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\LoginWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -126,6 +130,9 @@
     </Compile>
     <Compile Include="401UC\QuickAccessButton.xaml.cs">
       <DependentUpon>QuickAccessButton.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="401UC\StorageUC.xaml.cs">
+      <DependentUpon>StorageUC.xaml</DependentUpon>
     </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -207,16 +214,44 @@
     <Resource Include="Assets\LogoName.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Assets\Close_Button.png" />
-    <Resource Include="Assets\Minimize_Button.png" />
+    <Resource Include="Assets\MainWindow\Close_Button.png" />
+    <Resource Include="Assets\MainWindow\Minimize_Button.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Assets\Import_Button.png" />
-    <Resource Include="Assets\Payment_Button.png" />
-    <Resource Include="Assets\Product_Button.png" />
-    <Resource Include="Assets\Shop_s Ava.png" />
-    <Resource Include="Assets\Total bills.png" />
-    <Resource Include="Assets\Total hours.png" />
+    <Resource Include="Assets\MainWindow\Import_Button.png" />
+    <Resource Include="Assets\MainWindow\Payment_Button.png" />
+    <Resource Include="Assets\MainWindow\Product_Button.png" />
+    <Resource Include="Assets\MainWindow\Shop_s Ava.png" />
+    <Resource Include="Assets\MainWindow\Total bills.png" />
+    <Resource Include="Assets\MainWindow\Total hours.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\MainWindow\AvatarCover.png" />
+    <Resource Include="Assets\MainWindow\UserAvatar.png" />
+    <Resource Include="Assets\MainWindow\UserProfile.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\MainWindow\LogoutButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\LoginWindow\Background.png" />
+    <Resource Include="Assets\LoginWindow\BalloonA.png" />
+    <Resource Include="Assets\LoginWindow\BalloonB.png" />
+    <Resource Include="Assets\LoginWindow\BalloonC.png" />
+    <Resource Include="Assets\LoginWindow\BalloonD.png" />
+    <Resource Include="Assets\LoginWindow\BalloonE.png" />
+    <Resource Include="Assets\LoginWindow\BalloonF.png" />
+    <Resource Include="Assets\LoginWindow\BalloonsOverview.png" />
+    <Resource Include="Assets\LoginWindow\Board.png" />
+    <Resource Include="Assets\LoginWindow\CloseButton.png" />
+    <Resource Include="Assets\LoginWindow\LoginButton.png" />
+    <Resource Include="Assets\LoginWindow\LoginButtonFrame.png" />
+    <Resource Include="Assets\LoginWindow\LoginOverview.png" />
+    <Resource Include="Assets\LoginWindow\MinimizeButton.png" />
+    <Resource Include="Assets\LoginWindow\PasswordIFFrame.png" />
+    <Resource Include="Assets\LoginWindow\Stair.png" />
+    <Resource Include="Assets\LoginWindow\Store.png" />
+    <Resource Include="Assets\LoginWindow\UsernameIFFrame.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
