--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -41,11 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountBLL.cs" />
     <Compile Include="BillBLL.cs" />
     <Compile Include="BillDetailBLL.cs" />
+    <Compile Include="ProductBLL.cs" />
     <Compile Include="ShipmentBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShipmentDetailBLL.cs" />
+    <Compile Include="StaffBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
