--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShipmentDAL.cs" />
     <Compile Include="ShipmentDetailDAL.cs" />
+    <Compile Include="StaffDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DTO\DTO.csproj">
