--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -41,12 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountDTO.cs" />
     <Compile Include="BillDTO.cs" />
     <Compile Include="BillDetailDTO.cs" />
     <Compile Include="ProductDTO.cs" />
     <Compile Include="ShipmentDTO.cs" />
     <Compile Include="ShipmentDetailDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaffDTO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
