Added Data Field to instate SQL
- Added Data Field to instate SQL
- Successful applying to ProductUC (Product Preview and Product Insight Window
- Changed Original and Category from Textbox to Combobox

--- a/410ShopManagement/GUI.csproj
+++ b/410ShopManagement/GUI.csproj
@@ -87,6 +87,8 @@
     <Compile Include="401UC\ProductUC.xaml.cs">
       <DependentUpon>ProductUC.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Classes\DataField.cs" />
+    <Compile Include="Classes\Product.cs" />
     <Compile Include="Windows\BillDetailWindow.xaml.cs">
       <DependentUpon>BillDetailWindow.xaml</DependentUpon>
     </Compile>
