Added Account and Staff
- Added Account and Staff data
- Added Shipment and ShipmentDetail
- Fixed bug: Product Insight Window (edit product) and Create Product Window now cant make price and sale field to get double value
- Login with Account and Permission
- DataField can see the user staff's name
- Complete: Import Product
+ Import Window can get the user staff's name
+ Import Window's search box can get all the product name
- Complete: Create Product Window

--- a/410ShopManagement/GUI.csproj
+++ b/410ShopManagement/GUI.csproj
@@ -87,8 +87,12 @@
     <Compile Include="401UC\ProductUC.xaml.cs">
       <DependentUpon>ProductUC.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Classes\Account.cs" />
     <Compile Include="Classes\DataField.cs" />
     <Compile Include="Classes\Product.cs" />
+    <Compile Include="Classes\Shipment.cs" />
+    <Compile Include="Classes\ShipmentDetail.cs" />
+    <Compile Include="Classes\Staff.cs" />
     <Compile Include="Windows\BillDetailWindow.xaml.cs">
       <DependentUpon>BillDetailWindow.xaml</DependentUpon>
     </Compile>
