Added Bill and Bill Detail
- Added Bill and Bill Detail
- Complete: Transaction History Window and Bill Detail Window

--- a/410ShopManagement/GUI.csproj
+++ b/410ShopManagement/GUI.csproj
@@ -88,6 +88,8 @@
       <DependentUpon>ProductUC.xaml</DependentUpon>
     </Compile>
     <Compile Include="Classes\Account.cs" />
+    <Compile Include="Classes\Bill.cs" />
+    <Compile Include="Classes\BillDetail.cs" />
     <Compile Include="Classes\DataField.cs" />
     <Compile Include="Classes\Product.cs" />
     <Compile Include="Classes\Shipment.cs" />
